force-app/main/default/objects/Product2/fields/LPCR_FamilyProduct__c.field-meta.xml
<CustomField>
    <fullName>LPCR_FamilyProduct__c</fullName>
    <label>Product Family Tech</label>
    <length>255</length>
    <type>Text</type>
</CustomField>