force-app/main/default/objects/Product2/fields/LPCR_PourcentagePlancherMicro__c.field-meta.xml
<CustomField>
    <fullName>LPCR_PourcentagePlancherMicro__c</fullName>
    <label>Pourcentage Plancher Micro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>