force-app/main/default/objects/Product2/fields/LPCR_PrixPlancherParisIDF__c.field-meta.xml
<CustomField>
    <fullName>LPCR_PrixPlancherParisIDF__c</fullName>
    <label>Prix Plancher Paris/IDF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>