force-app/main/default/objects/Product2/fields/LPCR_RefCodeProduit__c.field-meta.xml
<CustomField>
    <fullName>LPCR_RefCodeProduit__c</fullName>
    <externalId>true</externalId>
    <label>Référence Code Produit</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>