force-app/main/default/objects/Product2/fields/LPCR_TypeEvenement__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TypeEvenement__c</fullName>
    <label>Type d&apos;événement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LPCR_TypeEvenement</valueSetName>
    </valueSet>
</CustomField>