force-app/main/default/objects/Product2/fields/LPCR_Typemensualisation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Typemensualisation__c</fullName>
    <label>Type mensualisation</label>
    <length>4</length>
    <type>Text</type>
</CustomField>